# openai-utils

./: .envrc  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: openai_schema_restrictions.md
src/openai_utils/: __init__.py  conversation.py  models.py  tool.py  tool_registry.py
src/openai_utils/pydantic/: schema_compat.py
tests/: conftest.py  test_models.py  test_schema_compat.py  test_schema_compat_keywords.py  test_schema_compat_typing.py  test_structured_output.py  test_structured_output_schema.py  test_with_tools.py
tests/cassettes/test_schema_compat/: test_make_openai_compatible_with_additional_properties.yaml
tests/cassettes/test_structured_output/: test_structured_output.yaml
tests/cassettes/test_structured_output_schema/: test_structured_output_anyof_fails.yaml  test_structured_output_deep_nesting.yaml  test_structured_output_missing_additional_properties.yaml  test_structured_output_optional_field_supported.yaml  test_structured_output_property_limit.yaml  test_structured_output_recursive_schema.yaml  test_structured_output_recursive_schema_with_defaults.yaml  test_structured_output_unsupported_array_keywords.yaml  test_structured_output_unsupported_number_keywords.yaml  test_structured_output_unsupported_object_keywords.yaml  test_structured_output_unsupported_string_keywords.yaml
tests/cassettes/test_with_tools/: test_with_tools.yaml  test_with_tools_and_structured_output.yaml  test_with_tools_split_registry.yaml
