[project]
name = "openai-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Omegaice", email = "950526+Omegaice@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.75.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 120