[project]
name = "openai-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Omegaice", email = "950526+Omegaice@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.75.0",
]
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "ruff>=0.11.6",
    "mypy>=1.15.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-icdiff>=0.9",
    "pytest-sugar>=1.0.0",
    "pytest-recording>=0.13.2",
]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
plugins = []
exclude = "tests/.*"